--- a/subSidor/forestallningar.html
+++ b/subSidor/forestallningar.html
@@ -13,9 +13,9 @@
     <header class="headerAllaSidor"><h1>Panjal Scenstudio</h1></header>
     <nav class="burgerMeny">
         <ul class="burgerLinks">
-            <li><a href="index.html">Hem</a></li>
-            <li><a href="subSidor/forestallningar.html">På gång</a></li>
-            <li><a href="subSidor/samverkan.html">Samverkan</a></li>
+            <li><a href="../index.html">Hem</a></li>
+            <li><a href="../subSidor/forestallningar.html">På gång</a></li>
+            <li><a href="../subSidor/samverkan.html">Samverkan</a></li>
             <li><a href="#">Galleri</a></li>
             <li><a href="#">Om oss</a></li>
         </ul>
@@ -26,7 +26,7 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
     <article class="articleIndex">
     <p>
         <strong> PanJál Scenstudio </strong> är en scenkonstverksamhet sprungen ur den polska fysiska teatertradition som fick fotfäste i Göteborg under 80- och 90-talet genom Sören Larssons teaterakademi. Under 2000-talet fortsatte David Sperling Bolander traditionen genom sina uppskattade enmansföreställningar, i nära samarbete med Sören. Sedan 2017 har verksamheten utökats, och vi har blivit fler som jobbar och skapar scenkonst och musik i studion i Sockerbruket, i form av föreställningar och träning. 
