--- a/subSidor/samverkan.html
+++ b/subSidor/samverkan.html
@@ -13,9 +13,9 @@
     <header class="headerAllaSidor"><h1>Panjal Scenstudio</h1></header>
     <nav class="burgerMeny">
         <ul class="burgerLinks">
-            <li><a href="../index.html">Hem</a></li>
-            <li><a href="../subSidor/forestallningar.html">På gång</a></li>
-            <li><a href="../subSidor/samverkan.html">Samverkan</a></li>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="subSidor/forestallningar.html">På gång</a></li>
+            <li><a href="subSidor/samverkan.html">Samverkan</a></li>
             <li><a href="#">Galleri</a></li>
             <li><a href="#">Om oss</a></li>
         </ul>
@@ -26,26 +26,26 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
     <section class="footerDiv">
-        <div class="lokalisering">   <h2>Kontakt info</h2>      
+            <h2>Kontakt info</h2>      
 <p>
-           +46760983832 <br>
+            +46760983832 <br>
 panjal.scenstudio@gmail.com <br>
-<a href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
-   Adress PanJál Scenstudio, Kungsladugård, Sockerbruket 5, 414 51 Göteborg
+<a class="lokalisering"
+href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
+    Adress PanJál Scenstudio, Kungsladugård, Sockerbruket 5, 414 51 Göteborg
 </a>
 </p>
-</div>
-        <div class="instagram">
-           <a  href="https://www.instagram.com/" target="_blank">
-               <img src="../img/insta.blå.png" width="80" height="80"> </a>
+         <div>
+            <a class="instagram" href="https://www.instagram.com/" target="_blank">
+                <img src="../img/insta.blå.png" width="80" height="80"></a>
+         </div>
+        <div>
+            <a class="facebook" href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
+             <img src="../img/Facebook.blå.png" width="80" height="80"></a>
         </div>
-       <div class="facebook">
-           <a href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
-            <img src="../img/Facebook.blå.png" width="80" height="80"> </a>
-       </div>
-   </section>
+    </section>
 
 <section class="innerSamverkan">
     <header class="headerSamverkan">
@@ -60,14 +60,14 @@ panjal.scenstudio@gmail.com <br>
     </header>
         <article class="articleSamverkan1">
     <div class="headerSamverkanHusen">Gerlesborg</div>
-    <div class="bildSamverkan"><img src="../img/gerlersborg.jpg" alt=""></div>
+    <div class="bildGerlersborg"><img src="../img/gerlersborg.jpg" alt=""></div>
     <div class="articleGerlersborg">
         Scenkonst Gerlesborg är en mötesplats för scenkonstnärer och andra som är intresserade av hur man på scenen kan vara i stunden och nå den skapande punkten. PanJál och Scenstudion i Gerlesborg samarbetar i dagslägen genom föreställningsarbete och undervisning.
     </div>
     </article>
         <article class="articleSamverkan2">
     <div class="headerSamverkanHusen">Gathenhielmska Huset</div>
-    <div class="bilderSamverkan"><img src="../img/GathenhielmskaHuset.jpg" alt=""></div>
+    <div><img src="../img/GathenhielmskaHuset.jpg" alt=""></div>
     <div>
         Gathenhielmska Huset är en kulturmiljö med konstnärlig och kulturell verksamhet under utveckling. Historieverket bedriver verksamhet och samverkan samt skapar ett konstnärligt program i mötet mellan då och nu för att öppna upp Gathenhielmska Huset för allmänheten. Verksamheten riktar sig mot hela staden med platsutveckling samt lokala och internationella  platsspecifika scenkonstproduktioner. PanJál är en av platserna för detta skapande.    
      </div>
