--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@ Framåt planerar vi en renovering för att utöka studions golvyta.
 </p>
     </article>
     <section class="footerDiv">
-         <div class="lokalisering">   <h2>Kontakt info</h2>      
+            <h2>Kontakt info</h2>      
 <p>
             +46760983832 <br>
 panjal.scenstudio@gmail.com <br>
-<a href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
+<a class="lokalisering"
+href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
     Adress PanJál Scenstudio, Kungsladugård, Sockerbruket 5, 414 51 Göteborg
 </a>
 </p>
-</div>
-         <div class="instagram">
-            <a  href="https://www.instagram.com/" target="_blank">
-                <img src="img/insta.blå.png" width="80" height="80"> </a>
+         <div>
+            <a class="instagram" href="https://www.instagram.com/" target="_blank">
+                <img src="img/insta.blå.png" width="80" height="80">
          </div>
-        <div class="facebook">
-            <a href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
-             <img src="img/Facebook.blå.png" width="80" height="80"> </a>
+        <div>
+            <a class="facebook" href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
+             <img src="img/Facebook.blå.png" width="80" height="80">
         </div>
     </section>
 </section>
