--- a/subSidor/galleri.html
+++ b/subSidor/galleri.html
@@ -26,7 +26,7 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
     <section class="footerDiv">
 
             <h2>Kontakt info</h2>      
