--- a/subSidor/pagang.html
+++ b/subSidor/pagang.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section id="alltGalleri">
+    <section id="alltPagang">
 		<section id="bakgrundsBild">
 			<section class="panalLogga">
 				<?xml version="1.0" encoding="utf-8"?>
@@ -2184,25 +2184,37 @@ panjal.scenstudio@gmail.com <br>
             <img src="../img/Facebook.blå.png" width="80" height="80"> </a>
        </div>
    </section>
-   <section class="innerGalleri">
-    <section class="articleGalleri">
-				<p><h1>Galleri</h1></p>
-    <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/Kapten Beto.png" alt=""></div>
-        <div><strong>Kapten beto</strong></div>
+   <section class="innerPagang">
+				<p><h1>På Gång</h1></p>
+    <div class="bilderOchHeadline">
+        <div> <img class="bilderPagang" src="../img/Forestallningen.jpg" alt=""></div>
+        <div><h4>En scenisk komposition av och med David Sperling Bolander</h4>
+            <br>
+            <p>
+            Föreställningen bygger på David Sperling Bolanders egna erfarenheter efter att ha opererat bort en hjärntumör 2011. 
+            I det psykotiska tillståndet som uppstod, utan sömn i tre veckor, upplevde han att han fick kontakt med tiden (evigheten), universum och alltings vilja och synkronisitet… 
+            ett tillstånd som han själv kallade för “megarytmen”. I den nya verkligheten skrev David ner många tankar, textfragment, filmade och gjorde en del ljudinspelningar. 
+            Det är det materialet som är grunden till Föreställningen. Detta kan låta svårt och ångestfyllt! Och visst blir det en berättelse om människans kamp med oro ensamhet, tro och tvivel, exstensiell ångest, klimatkris, oro för ekonomin osv… 
+            men det är samtidigt en föreställning om det storslagna i att vara människa. Att det finns hopp om vår civilisations överlevnad, att vi bör känna tacksamhet över livet och om vikten att göra nåt bra av det! Med stöd från Gbg Stad. 
+        </p> 
     </div>
-    <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/Opus 5.png" alt=""></div>
-        <div><strong>Opus 5</strong></div>
     </div>
-    <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/Samtal med Sören.png" alt=""></div>
-        <div><strong>Samtal med sören</strong></div>
-    </div>
-    <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/The True Story.png" alt=""></div>
-        <div><strong>Bengt Erik Olsons sista konsert</strong></div>
-    </div>
+    <section class="innerDivPagang">
+<div class="divPagang">
+<div> <img class="bilderPagang" src="../img/Heikkinen.jpg" alt=""></div>
+<div>Anna Heikkinen är utbildad sångpedagog och sångerska i bland annat Längtans Kapell. Anna har påbörjat en utbildning till Roy Hart- pedagog i Frankrike. Hon leder röstsessioner för enskilda elever och i grupp. Maila Anna för att boka en träff!
+
+	annaheikkinen@hotmail.com</div>
+</div>
+<div class="divPagang nummer2">
+<div> <img class="bilderPagang" src="../img/Marçinkovski.jpg" alt=""></div>
+<div>Magnus Marçinkovski Pettersson, sångare och låtskrivare, har snart avslutat sin utbildning till Roy Hart- pedagog i Frankrike. Han leder röstsessioner för enskilda elever och grupper.
+
+	Maila Magnus för att boka en träff!          
+	
+	magnus.pettersson68@gmail.com</div>
+
+</section>
     </section>
 </section>
 </section>
