--- a/subSidor/omoss.html
+++ b/subSidor/omoss.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section id="alltGalleri">
+    <section id="alltOmOss">
 		<section id="bakgrundsBild">
 			<section class="panalLogga">
 				<?xml version="1.0" encoding="utf-8"?>
@@ -2184,26 +2184,29 @@ panjal.scenstudio@gmail.com <br>
             <img src="../img/Facebook.blå.png" width="80" height="80"> </a>
        </div>
    </section>
-   <section class="innerGalleri">
-    <section class="articleGalleri">
-				<p><h1>Galleri</h1></p>
-    <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/Kapten Beto.png" alt=""></div>
-        <div><strong>Kapten beto</strong></div>
-    </div>
-    <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/Opus 5.png" alt=""></div>
-        <div><strong>Opus 5</strong></div>
-    </div>
-    <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/Samtal med Sören.png" alt=""></div>
-        <div><strong>Samtal med sören</strong></div>
-    </div>
-    <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/The True Story.png" alt=""></div>
-        <div><strong>Bengt Erik Olsons sista konsert</strong></div>
-    </div>
+
+<section class="innerOmOss">
+    <h1>Om Oss</h1>
+    <section class="scenkonstnärerna">
+        <div> <img class="bilderOmOss" src="../img/david.Sperling.jpg" alt="">
+            <p>David Sperling Bolander</p>
+		</div> 
+		<div> <img class="bilderOmOss" src="../img/SaraAhlberg.jpg" alt="">
+            <p>Sara Ahlberg</p> 
+		</div>
+        <div> <img class="bilderOmOss" src="../img/IsabelLagos.jpg" alt="">
+            <p>Isabel Lagos</p>
+        </div> 
+        <div> <img class="bilderOmOss" src="../img/JoelHeirås.png" alt="">
+            <p>Joel Heirås</p> 
+        </div>
     </section>
+        <div>
+            Vi som driver och utvecklar PanJál Scenstudio är ett gäng engagerade scenkonstnärer och producenter som vill skapa en plats där olika uttryck kommer till mötes. Vi verkar för att PanJál skall vara en tillgänglig och kreativ plattform för det fysiska och musikaliska skapandet, i samverkan med andra.
+            <br>
+            Intresserad? hör av dig till:
+    <strong>panjal.scenstudio@gmail.com </strong>
+        </div>
 </section>
 </section>
 </body>
