--- a/subSidor/pagang.html
+++ b/subSidor/pagang.html
@@ -2151,10 +2151,10 @@
     <nav class="burgerMeny">
         <ul class="burgerLinks">
             <li><a href="../index.html">Hem</a></li>
-            <li><a href="../projvt21/subSidor/pagang.html">På gång</a></li>
+            <li><a href="../subSidor/pagang.html">På gång</a></li>
             <li><a href="../subSidor/samverkan.html">Samverkan</a></li>
             <li><a href="../subSidor/galleri.html">Galleri</a></li>
-            <li><a href="#">Om oss</a></li>
+            <li><a href="../subSidor/omoss.html">Om oss</a></li>
         </ul>
         
         <div class="burger">
