--- a/subSidor/samverkan.html
+++ b/subSidor/samverkan.html
@@ -2154,7 +2154,7 @@
             <li><a href="../subSidor/pagang.html">På gång</a></li>
             <li><a href="../subSidor/samverkan.html">Samverkan</a></li>
             <li><a href="../subSidor/galleri.html">Galleri</a></li>
-            <li><a href="#">Om oss</a></li>
+            <li><a href="../subSidor/omoss.html">Om oss</a></li>
         </ul>
         
         <div class="burger">
@@ -2168,10 +2168,11 @@
     <section class="footerDiv">
         <div class="lokalisering">   <h2>Kontakt info</h2>      
 <p>
-           +46760983832 <br>
-panjal.scenstudio@gmail.com <br>
+Vårt nummer: +46760983832 <br>
+E-mail: panjal.scenstudio@gmail.com <br>
+Adress: 
 <a href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
-   Adress PanJál Scenstudio, Kungsladugård, Sockerbruket 5, 414 51 Göteborg
+    PanJál Scenstudio, Kungsladugård, Sockerbruket 5, 414 51 Göteborg
 </a>
 </p>
 </div>
@@ -2198,7 +2199,7 @@ panjal.scenstudio@gmail.com <br>
     </header>
         <article class="articleSamverkan1">
     <div class="headerSamverkanHusen">Gerlesborg</div>
-    <div class="bildSamverkan"><img src="../img/gerlersborg.jpg" alt=""></div>
+    <div class="bilderSamverkan"><img src="../img/gerlersborg.jpg" alt=""></div>
     <div class="articleGerlersborg">
         Scenkonst Gerlesborg är en mötesplats för scenkonstnärer och andra som är intresserade av hur man på scenen kan vara i stunden och nå den skapande punkten. PanJál och Scenstudion i Gerlesborg samarbetar i dagslägen genom föreställningsarbete och undervisning.
     </div>
