--- a/subSidor/pagang.html
+++ b/subSidor/pagang.html
@@ -2202,17 +2202,17 @@ panjal.scenstudio@gmail.com <br>
     <section class="innerDivPagang">
 <div class="divPagang">
 <div> <img class="bilderPagang" src="../img/Heikkinen.jpg" alt=""></div>
-<div>Anna Heikkinen är utbildad sångpedagog och sångerska i bland annat Längtans Kapell. Anna har påbörjat en utbildning till Roy Hart- pedagog i Frankrike. Hon leder röstsessioner för enskilda elever och i grupp. Maila Anna för att boka en träff!
+<div><p>Anna Heikkinen är utbildad sångpedagog och sångerska i bland annat Längtans Kapell. Anna har påbörjat en utbildning till Roy Hart- pedagog i Frankrike. Hon leder röstsessioner för enskilda elever och i grupp. Maila Anna för att boka en träff!
 
-	annaheikkinen@hotmail.com</div>
+<strong> annaheikkinen@hotmail.com</strong></p> </div>
 </div>
-<div class="divPagang nummer2">
+<div class="divPagang">
 <div> <img class="bilderPagang" src="../img/Marçinkovski.jpg" alt=""></div>
-<div>Magnus Marçinkovski Pettersson, sångare och låtskrivare, har snart avslutat sin utbildning till Roy Hart- pedagog i Frankrike. Han leder röstsessioner för enskilda elever och grupper.
+<div><p> Magnus Marçinkovski Pettersson, sångare och låtskrivare, har snart avslutat sin utbildning till Roy Hart- pedagog i Frankrike. Han leder röstsessioner för enskilda elever och grupper.
 
 	Maila Magnus för att boka en träff!          
 	
-	magnus.pettersson68@gmail.com</div>
+<strong>magnus.pettersson68@gmail.com</strong></p></div>
 
 </section>
     </section>
