--- a/subSidor/samverkan.html
+++ b/subSidor/samverkan.html
@@ -2189,13 +2189,11 @@ Adress:
 <section class="innerSamverkan">
     <header class="headerSamverkan">
         <h1>
-            PARTNERS
+            Samverkan
         </h1>
     </header>
     <header class="underHeaderSamverkan">
-        <h3>
-            Husen
-        </h3>
+
     </header>
         <article class="articleSamverkan1">
     <div class="headerSamverkanHusen">Gerlesborg</div>
@@ -2207,7 +2205,7 @@ Adress:
         <article class="articleSamverkan2">
     <div class="headerSamverkanHusen">Gathenhielmska Huset</div>
     <div class="bilderSamverkan"><img src="../img/GathenhielmskaHuset.jpg" alt=""></div>
-    <div>
+    <div class="articleGerlersborg">
         Gathenhielmska Huset är en kulturmiljö med konstnärlig och kulturell verksamhet under utveckling. Historieverket bedriver verksamhet och samverkan samt skapar ett konstnärligt program i mötet mellan då och nu för att öppna upp Gathenhielmska Huset för allmänheten. Verksamheten riktar sig mot hela staden med platsutveckling samt lokala och internationella  platsspecifika scenkonstproduktioner. PanJál är en av platserna för detta skapande.    
      </div>
 
@@ -2215,7 +2213,7 @@ Adress:
         <article class="articleSamverkan3">
             <div class="headerSamverkanHusen">Våra Partners</div>
             <p></p>
-            <ul>
+            <ul class="articleGerlersborg">
                 <li>Scenstudion Gerlesborg - konstnärligt utbyte och samarbete </li>
                 <li>Historieverket/ Gathenhielmska Huset - samproduktioner och residens</li>
                 <li>Collective Moves - internationella produktioner</li>
