--- a/subSidor/galleri.html
+++ b/subSidor/galleri.html
@@ -2189,19 +2189,31 @@ panjal.scenstudio@gmail.com <br>
 				<p><h1>Galleri</h1></p>
     <div class="bilderOchInfo">
         <div> <img class="bilderGalleri" src="../img/Kapten Beto.png" alt=""></div>
+		<div class="innerBilderOchInfo">
         <div><strong>Kapten beto</strong></div>
+		<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p></div>
     </div>
+	</div>
     <div class="bilderOchInfo">
         <div> <img class="bilderGalleri" src="../img/Opus 5.png" alt=""></div>
+		<div class="innerBilderOchInfo">
         <div><strong>Opus 5</strong></div>
+		<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p></div>
+	</div>
     </div>
     <div class="bilderOchInfo">
         <div> <img class="bilderGalleri" src="../img/Samtal med Sören.png" alt=""></div>
+		<div class="innerBilderOchInfo">
         <div><strong>Samtal med sören</strong></div>
+		<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p></div>
+	</div>
     </div>
     <div class="bilderOchInfo">
         <div> <img class="bilderGalleri" src="../img/The True Story.png" alt=""></div>
+		<div class="innerBilderOchInfo">
         <div><strong>Bengt Erik Olsons sista konsert</strong></div>
+		<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p></div>
+	</div>
     </div>
     </section>
 </section>
