--- a/subSidor/omoss.html
+++ b/subSidor/omoss.html
@@ -2189,16 +2189,16 @@ panjal.scenstudio@gmail.com <br>
     <h1>Om Oss</h1>
     <section class="scenkonstnärerna">
         <div> <img class="bilderOmOss" src="../img/david.Sperling.jpg" alt="">
-            <p>David Sperling Bolander</p>
+            <p><h4>David Sperling Bolander</h4></p>
 		</div> 
 		<div> <img class="bilderOmOss" src="../img/SaraAhlberg.jpg" alt="">
-            <p>Sara Ahlberg</p> 
+            <p><h4>Sara Ahlberg</h4></p> 
 		</div>
         <div> <img class="bilderOmOss" src="../img/IsabelLagos.jpg" alt="">
-            <p>Isabel Lagos</p>
+            <p><h4>Isabel Lagos</h4></p>
         </div> 
         <div> <img class="bilderOmOss" src="../img/JoelHeirås.png" alt="">
-            <p>Joel Heirås</p> 
+            <p><h4>Joel Heirås</h4></p> 
         </div>
     </section>
         <div>
