--- a/subSidor/pagang.html
+++ b/subSidor/pagang.html
@@ -2177,11 +2177,11 @@ panjal.scenstudio@gmail.com <br>
 </div>
         <div class="instagram">
            <a  href="https://www.instagram.com/" target="_blank">
-               <img src="../img/insta.blå.png" width="80" height="80"> </a>
+               <img class="instaBild" src="../img/insta.blå.png"> </a>
         </div>
        <div class="facebook">
            <a href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
-            <img src="../img/Facebook.blå.png" width="80" height="80"> </a>
+            <img class="facebookBild" src="../img/Facebook.blå.png"> </a>
        </div>
    </section>
    <section class="innerPagang">
@@ -2199,6 +2199,7 @@ panjal.scenstudio@gmail.com <br>
         </p> 
     </div>
     </div>
+<div> <h2>Röstcoaching</h2></div>
     <section class="innerDivPagang">
 <div class="divPagang">
 <div> <img class="bilderPagang" src="../img/Heikkinen.jpg" alt=""></div>
