--- a/subSidor/samverkan.html
+++ b/subSidor/samverkan.html
@@ -2197,14 +2197,14 @@ Adress:
     </header>
         <article class="articleSamverkan1">
     <div class="headerSamverkanHusen">Gerlesborg</div>
-    <div class="bilderSamverkan"><img src="../img/gerlersborg.jpg" alt=""></div>
+    <div><img class="bilderSamverkan" src="../img/gerlersborg.jpg" alt=""></div>
     <div class="articleGerlersborg">
         Scenkonst Gerlesborg är en mötesplats för scenkonstnärer och andra som är intresserade av hur man på scenen kan vara i stunden och nå den skapande punkten. PanJál och Scenstudion i Gerlesborg samarbetar i dagslägen genom föreställningsarbete och undervisning.
     </div>
     </article>
         <article class="articleSamverkan2">
     <div class="headerSamverkanHusen">Gathenhielmska Huset</div>
-    <div class="bilderSamverkan"><img src="../img/GathenhielmskaHuset.jpg" alt=""></div>
+    <div><img class="bilderSamverkan" src="../img/GathenhielmskaHuset.jpg" alt=""></div>
     <div class="articleGerlersborg">
         Gathenhielmska Huset är en kulturmiljö med konstnärlig och kulturell verksamhet under utveckling. Historieverket bedriver verksamhet och samverkan samt skapar ett konstnärligt program i mötet mellan då och nu för att öppna upp Gathenhielmska Huset för allmänheten. Verksamheten riktar sig mot hela staden med platsutveckling samt lokala och internationella  platsspecifika scenkonstproduktioner. PanJál är en av platserna för detta skapande.    
      </div>
