--- a/subSidor/omoss.html
+++ b/subSidor/omoss.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body id="omOss">
     <section id="alltOmOss">
 		<section id="bakgrundsBild">
 			<section class="panalLogga">
