--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <section id="alltIndex">
 		<section id="bakgrundsBild">
+			<div id="panelDiv">
 			<section class="panalLogga">
 				<?xml version="1.0" encoding="utf-8"?>
 				<!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -2147,6 +2148,7 @@
 				</svg>
 				
 				</section>
+			</div>
     <header class="headerAllaSidor"><h1>Panjal Scenstudio</h1></header>
     <nav class="burgerMeny">
         <ul class="burgerLinks">
@@ -2165,25 +2167,6 @@
     </nav>
 </section>
     <script src="../js/script.js"></script>
-    <section class="footerDiv">
-        <div class="lokalisering">   <h2>Kontakt info</h2>      
-<p>
-           +46760983832 <br>
-panjal.scenstudio@gmail.com <br>
-<a href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
-   Adress PanJál Scenstudio, Kungsladugård, Sockerbruket 5, 414 51 Göteborg
-</a>
-</p>
-</div>
-        <div class="instagram">
-           <a  href="https://www.instagram.com/" target="_blank">
-               <img src="../img/insta.blå.png" width="80" height="80"> </a>
-        </div>
-       <div class="facebook">
-           <a href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
-            <img src="../img/Facebook.blå.png" width="80" height="80"> </a>
-       </div>
-   </section>
 
 <section class="innerIndex">
         <div> <p>
@@ -2229,6 +2212,26 @@ panjal.scenstudio@gmail.com <br>
 </div>
 
 </section>
+<section class="footerDiv">
+	<div class="lokalisering">   <h2>Kontakt info</h2>      
+<p>
+	   +46760983832 <br>
+panjal.scenstudio@gmail.com <br>
+<a href="https://www.google.com/maps/place/Quality+Hotel+Waterfront+G%C3%B6teborg/@57.6889761,11.9068586,17z/data=!4m8!1m2!2m1!1sPanJ%C3%A1l+Scenstudio,+Kungsladug%C3%A5rd,+Sockerbruket+5,+414+51+G%C3%B6teborg,+Sweden!3m4!1s0x464f8ccc61184735:0xb76fba0bbda34a8b!8m2!3d57.6905555!4d11.9077776" target="_blank"> 
+Adress PanJál Scenstudio, Kungsladugård, Sockerbruket 5, 414 51 Göteborg
+</a>
+</p>
+</div>
+	<div class="instagram">
+	   <a  href="https://www.instagram.com/" target="_blank">
+		   <img src="../img/insta.blå.png" width="80" height="80"> </a>
+	</div>
+   <div class="facebook">
+	   <a href="https://www.facebook.com/panjal.scenstudio/" target="_blank">
+		<img src="../img/Facebook.blå.png" width="80" height="80"> </a>
+   </div>
+</section>
+
 </section>
 </body>
 </html>
