--- a/subSidor/galleri.html
+++ b/subSidor/galleri.html
@@ -11,6 +11,7 @@
 <body>
     <section id="alltGalleri">
 		<section id="bakgrundsBild">
+			<div id="panelDiv">
 			<section class="panalLogga">
 				<?xml version="1.0" encoding="utf-8"?>
 				<!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -2147,6 +2148,7 @@
 				</svg>
 				
 				</section>
+			</div>
     <header class="headerAllaSidor"><h1>Panjal Scenstudio</h1></header>
     <nav class="burgerMeny">
         <ul class="burgerLinks">
@@ -2188,28 +2190,28 @@ panjal.scenstudio@gmail.com <br>
     <section class="articleGalleri">
 				<p><h1>Galleri</h1></p>
     <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/Kapten Beto.png" alt=""></div>
+        <div class="bildGalleri"> <img class="bilderGalleri" src="../img/Kapten Beto.png" alt=""></div>
 		<div class="innerBilderOchInfo">
         <div><strong>Kapten beto</strong></div>
 		<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p></div>
     </div>
 	</div>
     <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/Opus 5.png" alt=""></div>
+        <div class="bildGalleri"> <img class="bilderGalleri" src="../img/Opus 5.png" alt=""></div>
 		<div class="innerBilderOchInfo">
         <div><strong>Opus 5</strong></div>
 		<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p></div>
 	</div>
     </div>
     <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/Samtal med Sören.png" alt=""></div>
+        <div class="bildGalleri"> <img class="bilderGalleri" src="../img/Samtal med Sören.png" alt=""></div>
 		<div class="innerBilderOchInfo">
         <div><strong>Samtal med sören</strong></div>
 		<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p></div>
 	</div>
     </div>
     <div class="bilderOchInfo">
-        <div> <img class="bilderGalleri" src="../img/The True Story.png" alt=""></div>
+        <div class="bildGalleri"> <img class="bilderGalleri" src="../img/The True Story.png" alt=""></div>
 		<div class="innerBilderOchInfo">
         <div><strong>Bengt Erik Olsons sista konsert</strong></div>
 		<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p></div>
