--- a/subSidor/pagang.html
+++ b/subSidor/pagang.html
@@ -11,6 +11,7 @@
 <body>
     <section id="alltPagang">
 		<section id="bakgrundsBild">
+			<div id="panelDiv">
 			<section class="panalLogga">
 				<?xml version="1.0" encoding="utf-8"?>
 				<!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -2147,6 +2148,7 @@
 				</svg>
 				
 				</section>
+			</div>
     <header class="headerAllaSidor"><h1>Panjal Scenstudio</h1></header>
     <nav class="burgerMeny">
         <ul class="burgerLinks">
